# mmsdr

./: CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1  mmsdr.desktop
.github/: perseus-fix-build.diff  readme.md
.github/workflows/: build_all.yml
core/: CMakeLists.txt
core/src/: core.cpp
docker_builds/ubuntu_jammy/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
source_modules/fobossdr_agile_source/: CMakeLists.txt
source_modules/fobossdr_agile_source/src/: main.cpp
source_modules/plutosdr_source/: CMakeLists.txt
